fixed background on mobile

--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -4,6 +4,7 @@
   justify-content: center;
   padding: 0 5vw;
   height: 100vh;
+  background: transparent;
 }
 
 .banner h1 {
