--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,7 +1,10 @@
-.homeView {
+.fixedBg {
+  position: fixed;
   background-image: url('../assets/banner.jpg');
-  background-attachment: fixed;
   background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  z-index: -1;
 }
 
 .about, .skills, .education, .experience {
@@ -42,11 +45,5 @@
     margin-left: 20%;
     margin-right: 20%;
     width: 60%;
-  }
-}
-
-@media (max-width: 768px) {
-  .homeView {
-    background-attachment: none;
   }
 }
