--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -41,7 +41,6 @@ nav {
   padding: 0.5em 1em;
   text-decoration: none;
   color: var(--color);
-  background-color: var(--grey);
   text-align: center;
   border-bottom: solid 3px var(--grey);
 }
